--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,45 +2,36 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.lmy.customview">
     <!-- 日历 -->
-    <uses-permission android:name="android.permission.READ_CALENDAR" />
-    <!-- 相机 -->
-    <uses-permission android:name="android.permission.CAMERA" />
-    <!-- 手机 打电话之类 -->
+    <uses-permission android:name="android.permission.READ_CALENDAR" /> <!-- 相机 -->
+    <uses-permission android:name="android.permission.CAMERA" /> <!-- 手机 打电话之类 -->
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
-    <uses-permission android:name="android.permission.CALL_PHONE" />
-    <!-- 位置 -->
+    <uses-permission android:name="android.permission.CALL_PHONE" /> <!-- 位置 -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-    <!-- 传感器 -->
-    <uses-permission android:name="android.permission.BODY_SENSORS" />
-    <!-- 联系人 -->
-    <uses-permission android:name="android.permission.READ_CONTACTS" />
-    <!-- 信息 -->
-    <uses-permission android:name="android.permission.SEND_SMS" />
-    <!-- 录音 -->
-    <uses-permission android:name="android.permission.RECORD_AUDIO" />
-    <!-- 读写存储 -->
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" /> <!-- 传感器 -->
+    <uses-permission android:name="android.permission.BODY_SENSORS" /> <!-- 联系人 -->
+    <uses-permission android:name="android.permission.READ_CONTACTS" /> <!-- 信息 -->
+    <uses-permission android:name="android.permission.SEND_SMS" /> <!-- 录音 -->
+    <uses-permission android:name="android.permission.RECORD_AUDIO" /> <!-- 读写存储 -->
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <!-- 允许程序获取网络信息状态，如当前的网络连接是否有效 -->
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <!-- 允许程序访问网络连接，可能产生GPRS流量 -->
-    <uses-permission android:name="android.permission.INTERNET" />
-    <!-- 因为8.0添加了新的安全措施，不允许应用内安装未经过Google play验证的应用,但是又有更新应用的需求 -->
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" /> <!-- 允许程序获取网络信息状态，如当前的网络连接是否有效 -->
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" /> <!-- 允许程序访问网络连接，可能产生GPRS流量 -->
+    <uses-permission android:name="android.permission.INTERNET" /> <!-- 因为8.0添加了新的安全措施，不允许应用内安装未经过Google play验证的应用,但是又有更新应用的需求 -->
     <uses-permission android:name="android.permission.REPLACE_EXISTING_PACKAGE" />
     <uses-permission android:name="android.permission.REQUEST_INSTALL_PACKAGES" />
 
     <application
+        android:name=".app"
         android:allowBackup="true"
         android:hardwareAccelerated="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:name=".app"
         android:largeHeap="true"
         android:networkSecurityConfig="@xml/network_security_config"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".takephoto.TakePhotoMainActivity"></activity>
+        <activity android:name=".toast.ToastKuActivity"></activity>
+        <activity android:name=".LoadToast.LoadToastActivity" />
+        <activity android:name=".takephoto.TakePhotoMainActivity" />
         <activity android:name=".takephoto.takephoto.TakeActivity" />
         <activity android:name=".MPChart.Activity.CombinationActivity" />
         <activity android:name=".MPChart.Activity.RecyclerViewHeapActivity" />
