--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,14 +22,17 @@
     <application
         android:name=".app"
         android:allowBackup="true"
-        android:hardwareAccelerated="false"
+        android:hardwareAccelerated="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:largeHeap="true"
         android:networkSecurityConfig="@xml/network_security_config"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".toast.ToastKuActivity"></activity>
+        <activity android:name=".banner.BannerActivity"></activity>
+        <activity android:name=".CuttoAnimation.SharedActivity" />
+        <activity android:name=".CuttoAnimation.AnimationActivity" />
+        <activity android:name=".toast.ToastKuActivity" />
         <activity android:name=".LoadToast.LoadToastActivity" />
         <activity android:name=".takephoto.TakePhotoMainActivity" />
         <activity android:name=".takephoto.takephoto.TakeActivity" />
@@ -67,6 +70,15 @@
         <activity android:name=".Activity.MainActivity" /> <!-- recyclerview增加头部测试 -->
         <activity android:name=".RecyclerViewAddTitle.activity.RecyclerViewActivity" /> <!-- recyclerview多选删除测试 -->
         <activity android:name=".CustomView.CustomviewActivity" />
+        <activity android:name=".CuttoAnimation.SharedElementsActivity" />
+        <activity android:name=".CuttoAnimation.SharedElementsActivity2" />
+        <activity
+            android:name=".CuttoAnimation.ScaleActivity"
+            android:theme="@style/AppTheme.ScaleTheme" />
+        <activity
+            android:name=".CuttoAnimation.BottomActivity"
+            android:theme="@style/AppTheme.SlideTheme" />
+        <activity android:name=".CuttoAnimation.ExplodeActivity" />
         <activity
             android:name=".Activity.StartLaunchActivity"
             android:theme="@style/ThemeSplash">
