补间动画 帧动画 属性动画的简单demo添加测试

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,11 @@
         android:networkSecurityConfig="@xml/network_security_config"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".RecyclerviewGroupDemo.RecyclerviewGroupActivity"></activity>
+        <activity android:name=".Animation.ShuXingAnimActivity"></activity>
+        <activity android:name=".Animation.ShiTuAnimActivity" />
+        <activity android:name=".Animation.DrawableAnimActivity" />
+        <activity android:name=".Animation.AndroidAnimationActivity" />
+        <activity android:name=".RecyclerviewGroupDemo.RecyclerviewGroupActivity" />
         <activity android:name=".AddView.AddViewActivity" />
         <activity android:name=".banner.BannerActivity" />
         <activity android:name=".CuttoAnimation.SharedActivity" />
