--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,8 @@
         android:networkSecurityConfig="@xml/network_security_config"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Animation.LottieAnimActivity"></activity>
+        <activity android:name=".MMKV.MMKVActivity"></activity>
+        <activity android:name=".Animation.LottieAnimActivity" />
         <activity android:name=".Animation.ShuXingAnimActivity" />
         <activity android:name=".Animation.ShiTuAnimActivity" />
         <activity android:name=".Animation.DrawableAnimActivity" />
