--- a/app/build.gradle
+++ b/app/build.gradle
@@ -100,6 +100,14 @@ dependencies {
     implementation 'io.supercharge:shimmerlayout:2.1.0'
     //微信使用的mvvk框架用于替代原生的Sp存储
     implementation 'com.tencent:mmkv-static:1.1.1'
+    //glide实现高斯模糊的效果
+    implementation 'jp.wasabeef:glide-transformations:4.0.0'
+    //viewpager2 实现垂直viewpager
+    implementation "androidx.viewpager2:viewpager2:1.0.0"
+    //实时模糊
+    implementation 'com.github.mmin18:realtimeblurview:1.2.1'
+
+
 
 
 }
