--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,8 +29,29 @@
         android:networkSecurityConfig="@xml/network_security_config"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MMKV.MMKVActivity"></activity>
+        <activity android:name=".md.ShuXingDonghuaActivity">
+
+        </activity>
+        <activity android:name=".md.CoordinatorLayoutActivity">
+
+        </activity>
+        <activity android:name=".md.MDActivity">
+
+        </activity>
+        <activity android:name=".MMKV.MMKVActivity" />
         <activity android:name=".Animation.LottieAnimActivity" />
+
+        <activity android:name=".Animation.DriftingBottleActivity" >
+
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+
+        </activity>
+
+
         <activity android:name=".Animation.ShuXingAnimActivity" />
         <activity android:name=".Animation.ShiTuAnimActivity" />
         <activity android:name=".Animation.DrawableAnimActivity" />
@@ -90,11 +111,11 @@
         <activity
             android:name=".Activity.StartLaunchActivity"
             android:theme="@style/ThemeSplash">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+
+
+
+
         </activity>
         <activity android:name=".takephoto.bgaphotopicker.activity.BGAPickerActivity" />
         <activity android:name=".takephoto.bgaphotopicker.activity.BGANinePhotoActivity" />
